--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ span{
     width: 100%;
     padding-left: 20%;
 }
-#fourth-image{
-    
+.four-image{
+    padding-right: 20%;
 }
 .five-para{
 padding-left: 10%;
